force-app/main/default/objects/Activity/fields/CP_AgentGroup__c.field-meta.xml
<CustomField>
    <fullName>CP_AgentGroup__c</fullName>
    <label>AgentGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>