force-app/main/default/objects/Activity/fields/CP_AgentID__c.field-meta.xml
<CustomField>
    <fullName>CP_AgentID__c</fullName>
    <label>AgentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>