force-app/main/default/objects/Activity/fields/CP_Amount__c.field-meta.xml
<CustomField>
    <fullName>CP_Amount__c</fullName>
    <label>Importe</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>