force-app/main/default/objects/Activity/fields/CP_Atendio__c.field-meta.xml
<CustomField>
    <fullName>CP_Atendio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atendió</label>
    <type>Checkbox</type>
</CustomField>