force-app/main/default/objects/Activity/fields/CP_BestHourToCall__c.field-meta.xml
<CustomField>
    <fullName>CP_BestHourToCall__c</fullName>
    <label>Mejor Hora Para Marcar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_ValuesBestHourToCall</valueSetName>
    </valueSet>
</CustomField>