force-app/main/default/objects/Activity/fields/CP_CallId__c.field-meta.xml
<CustomField>
    <fullName>CP_CallId__c</fullName>
    <label>Id de llamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>