force-app/main/default/objects/Activity/fields/CP_CallLink__c.field-meta.xml
<CustomField>
    <fullName>CP_CallLink__c</fullName>
    <formula>$Label.CP_GenesysURLBase+CP_CallId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link grabación</label>
    <type>Text</type>
</CustomField>