force-app/main/default/objects/Activity/fields/CP_Campana__c.field-meta.xml
<CustomField>
    <fullName>CP_Campana__c</fullName>
    <label>Campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>