force-app/main/default/objects/Activity/fields/CP_Canal__c.field-meta.xml
<CustomField>
    <fullName>CP_Canal__c</fullName>
    <label>Canal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>