force-app/main/default/objects/Activity/fields/CP_CasoConsulta__c.field-meta.xml
<CustomField>
    <fullName>CP_CasoConsulta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Consulta</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities (Consultas)</relationshipLabel>
    <relationshipName>CasosConsulta</relationshipName>
    <type>Lookup</type>
</CustomField>