force-app/main/default/objects/Activity/fields/CP_DeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>CP_DeadlineDate__c</fullName>
    <label>Fecha Plazo</label>
    <type>Date</type>
</CustomField>