force-app/main/default/objects/Activity/fields/CP_DNIS__c.field-meta.xml
<CustomField>
    <fullName>CP_DNIS__c</fullName>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>