force-app/main/default/objects/Activity/fields/CP_Dunning__c.field-meta.xml
<CustomField>
    <fullName>CP_Dunning__c</fullName>
    <label>Mora</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>