force-app/main/default/objects/Activity/fields/CP_EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>CP_EmployeeNumber__c</fullName>
    <formula>Owner:User.CP_EmployeeNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Empleado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>