force-app/main/default/objects/Activity/fields/CP_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>CP_Encuesta__c</fullName>
    <label>Encuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>