force-app/main/default/objects/Activity/fields/CP_EndOfCall__c.field-meta.xml
<CustomField>
    <fullName>CP_EndOfCall__c</fullName>
    <label>Fin de llamada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Aclaración</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Recado</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Llamar después</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>No contestó</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Equivocado</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Colgó</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Convenio</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>No define</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Mensaje de voz</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Negativa de pago</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Recordatorio</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Convenio de reestructura</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Devolución</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Ya abonó</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Ya no vive ahi</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Finalizada por sistema</label>
            </value>
            <value>
                <fullName>33</fullName>
                <isActive>false</isActive>
                <label>Sin resultado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>