force-app/main/default/objects/Activity/fields/CP_EstatusOrden__c.field-meta.xml
<CustomField>
    <fullName>CP_EstatusOrden__c</fullName>
    <label>Estatus orden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>