force-app/main/default/objects/Activity/fields/CP_EstatusTelefono__c.field-meta.xml
<CustomField>
    <fullName>CP_EstatusTelefono__c</fullName>
    <label>Estatus teléfono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>