force-app/main/default/objects/Activity/fields/CP_Fecha__c.field-meta.xml
<CustomField>
    <fullName>CP_Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>