force-app/main/default/objects/Activity/fields/CP_HasOpenCase__c.field-meta.xml
<CustomField>
    <fullName>CP_HasOpenCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Queja?</label>
    <type>Checkbox</type>
</CustomField>