force-app/main/default/objects/Activity/fields/CP_Hora_y_segundo_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>CP_Hora_y_segundo_de_creacion__c</fullName>
    <formula>MID( TEXT( CreatedDate - (6/24) ), 12, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate - (6/24) ), 15, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate - (6/24) ), 18, 2 )</formula>
    <label>Hora y segundo de creación</label>
    <type>Text</type>
</CustomField>