force-app/main/default/objects/Activity/fields/CP_NombreDelCliente__c.field-meta.xml
<CustomField>
    <fullName>CP_NombreDelCliente__c</fullName>
    <label>Nombre del Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>