force-app/main/default/objects/Activity/fields/CP_NumeroDeCliente__c.field-meta.xml
<CustomField>
    <fullName>CP_NumeroDeCliente__c</fullName>
    <label>Número de Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>