force-app/main/default/objects/Activity/fields/CP_NumeroDeOrden__c.field-meta.xml
<CustomField>
    <fullName>CP_NumeroDeOrden__c</fullName>
    <label>Número de Orden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>