force-app/main/default/objects/Activity/fields/CP_OtherReasonNonComp__c.field-meta.xml
<CustomField>
    <fullName>CP_OtherReasonNonComp__c</fullName>
    <label>Especifique razón incumplimiento</label>
    <length>128</length>
    <type>Text</type>
</CustomField>