force-app/main/default/objects/Activity/fields/CP_ReasonNonCompliance__c.field-meta.xml
<CustomField>
    <fullName>CP_ReasonNonCompliance__c</fullName>
    <label>Razón Incumplimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>No tiene dinero</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ya abonó</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>No recibe estado de cuenta / No recuerda su fecha de pago</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Prestó su crédito</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Se encuentra fuera de la ciudad</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Se encuentra fuera del país / Está incapacitado Fisicamente</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Hizo una Devolución</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Tiene más de una semana que hizo devolución y aun no se refleja</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Tiene menos de una semana que hizo devolución</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Lo que compró no funciona</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Su artículo ya está en reparación y no se lo han entregado</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Cliente Falleció</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Falleció un familiar o familiar se encuentra enfermo</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>No va a llegar a acuerdo por teléfono porque le pueden hacer fraude</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>No tiene tiempo y quiere evadir llamada</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Ya tiene Convenio en Cobranza Calle</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>No reconoce el adeudo</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>La cajera no quiso recibir abono</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Familiar directo pregunta : ¿Por qué me hace responsable de la cuenta?</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Cliente se niega o no puede pagar</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Cliente realizó congelamiento</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>