force-app/main/default/objects/Activity/fields/CP_SurveyAccepted__c.field-meta.xml
<CustomField>
    <fullName>CP_SurveyAccepted__c</fullName>
    <description>El cliente aceptó aceptó la encuesta.</description>
    <label>Encuesta Aceptada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>