force-app/main/default/objects/Activity/fields/CP_Telefono__c.field-meta.xml
<CustomField>
    <fullName>CP_Telefono__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>