force-app/main/default/objects/Activity/fields/CP_Term__c.field-meta.xml
<CustomField>
    <fullName>CP_Term__c</fullName>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>