force-app/main/default/objects/Activity/fields/CP_WhoAnswered__c.field-meta.xml
<CustomField>
    <fullName>CP_WhoAnswered__c</fullName>
    <label>¿Quien Contestó?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Cónyuge</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mamá</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Papá</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No es familiar</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Otro familiar</label>
            </value>
            <value>
                <fullName>NLC</fullName>
                <label>No lo conoce</label>
            </value>
            <value>
                <fullName>LCNF</fullName>
                <label>Lo conoce y no es familiar</label>
            </value>
            <value>
                <fullName>NLI</fullName>
                <label>No logré identificar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>