force-app/main/default/objects/Activity/fields/dSalesArticulo__c.field-meta.xml
<CustomField>
    <fullName>dSalesArticulo__c</fullName>
    <label>Artículo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>