force-app/main/default/objects/Activity/fields/dsalesCertificado__c.field-meta.xml
<CustomField>
    <fullName>dsalesCertificado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificado</label>
    <referenceTo>DSALES_Certificado__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Citas</relationshipName>
    <type>Lookup</type>
</CustomField>