force-app/main/default/objects/Activity/fields/dSalesCodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>dSalesCodigoPostal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal</label>
    <referenceTo>dsalesCP__c</referenceTo>
    <relationshipLabel>Eventos</relationshipLabel>
    <relationshipName>Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>