force-app/main/default/objects/Activity/fields/dSalesCodigoPostalCliente__c.field-meta.xml
<CustomField>
    <fullName>dSalesCodigoPostalCliente__c</fullName>
    <label>Código Postal del cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>