force-app/main/default/objects/Activity/fields/dSalesDireccionCliente__c.field-meta.xml
<CustomField>
    <fullName>dSalesDireccionCliente__c</fullName>
    <label>Dirección del cliente</label>
    <length>90</length>
    <type>Text</type>
</CustomField>