force-app/main/default/objects/Activity/fields/dSalesEstatusCita__c.field-meta.xml
<CustomField>
    <fullName>dSalesEstatusCita__c</fullName>
    <label>Estatus de la cita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Programada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Instalada</fullName>
            </value>
            <value>
                <fullName>Incidencia (Algún problema con la instalación)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>