force-app/main/default/objects/Activity/fields/dSalesMarca__c.field-meta.xml
<CustomField>
    <fullName>dSalesMarca__c</fullName>
    <label>Marca</label>
    <length>10</length>
    <type>Text</type>
</CustomField>