force-app/main/default/objects/Activity/fields/dSalesModelo__c.field-meta.xml
<CustomField>
    <fullName>dSalesModelo__c</fullName>
    <label>Modelo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>