force-app/main/default/objects/Activity/fields/dSalesNoCita__c.field-meta.xml
<CustomField>
    <fullName>dSalesNoCita__c</fullName>
    <label>No. Cita</label>
    <length>10</length>
    <type>Text</type>
</CustomField>