force-app/main/default/objects/Activity/fields/dSalesNombreCliente__c.field-meta.xml
<CustomField>
    <fullName>dSalesNombreCliente__c</fullName>
    <formula>dsalesCertificado__r.DSALES_Cliente__r.FirstName &amp; &quot; &quot; &amp; dsalesCertificado__r.DSALES_Cliente__r.LastName &amp; &quot; &quot; &amp; dsalesCertificado__r.DSALES_Cliente__r.Suffix</formula>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>