force-app/main/default/objects/Activity/fields/dSalesProveedores__c.field-meta.xml
<CustomField>
    <fullName>dSalesProveedores__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proveedores</label>
    <referenceTo>dsalesProveedores__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>