force-app/main/default/objects/Activity/fields/dSalesRealizado__c.field-meta.xml
<CustomField>
    <fullName>dSalesRealizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realizado</label>
    <type>Checkbox</type>
</CustomField>