force-app/main/default/objects/Activity/fields/dSalesRegion__c.field-meta.xml
<CustomField>
    <fullName>dSalesRegion__c</fullName>
    <formula>dSalesCodigoPostal__r.dsalesCiudad__r.dsalesRegion__r.Name</formula>
    <label>Región</label>
    <type>Text</type>
</CustomField>