force-app/main/default/objects/Activity/fields/dSalesResultadosCuestionario__c.field-meta.xml
<CustomField>
    <fullName>dSalesResultadosCuestionario__c</fullName>
    <label>Resultados Cuestionario</label>
    <type>TextArea</type>
</CustomField>