force-app/main/default/objects/Activity/fields/dSalesSkuTangible__c.field-meta.xml
<CustomField>
    <fullName>dSalesSkuTangible__c</fullName>
    <label>Sku Tangible</label>
    <length>6</length>
    <type>Text</type>
</CustomField>