force-app/main/default/objects/Activity/fields/dSalesTecnico__c.field-meta.xml
<CustomField>
    <fullName>dSalesTecnico__c</fullName>
    <label>Técnico</label>
    <length>50</length>
    <type>Text</type>
</CustomField>