force-app/main/default/objects/Activity/fields/FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>FechaCreacion__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creación 2</label>
    <type>Date</type>
</CustomField>