force-app/main/default/objects/Activity/fields/Motivo_de_Reactivacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Reactivacion__c</fullName>
    <description>Guarda el Motivo de Reactivación en el caso primario.</description>
    <label>Motivo de Reactivación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motivos_de_Reactivacion</valueSetName>
    </valueSet>
</CustomField>